Add docker hub stuff.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,8 @@ services:
   - docker
 
 script:
-  - docker build -t dbarbar/pythonqa:${TRAVIS_COMMIT}
+  - docker build -t dbarbar/pythonqa:${TRAVIS_COMMIT} .
+
+deploy:
+  - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+  - docker push dbarbar/pythonqa:${TRAVIS_COMMIT}
