Try this with travis now.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,6 @@ services:
 script:
   - docker build -t dbarbar/pythonqa:${TRAVIS_COMMIT} .
 
-before_deploy:
+after_success:
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-
-deploy:
   - docker push dbarbar/pythonqa:${TRAVIS_COMMIT}
